--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,12 +9,12 @@ services:
         links:
             - mariadb:mariadb
         environment:
-            DB_CONNECTION: mysql
-            DB_HOST: mariadb
-            DB_PORT: 3306
-            DB_DATABASE: gene_lookup
-            DB_USERNAME: root
-            DB_PASSWORD: password
+            - DB_CONNECTION=mysql
+            - DB_HOST=mariadb
+            - DB_PORT=3306
+            - DB_DATABASE=gene_lookup
+            - DB_USERNAME=root
+            - DB_PASSWORD=password
     mariadb:
         image: mariadb:10.1.21
         ports:
@@ -25,8 +25,8 @@ services:
     artisan:
         image: genelookup_app
         container_name: genelookup_artisan
-        volumes:
-            - .:/srv/app
+        # volumes:
+        #     - .:srv/app
         entrypoint: [
             "php",
             "/srv/app/artisan"
