--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=6454cafbc2a256141f96",
+    "/css/app.css": "/css/app.css?id=41b968c33e506af09599",
+    "/js/app.js.map": "/js/app.js.map?id=2185e83196869a331a6a"
 }
