--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,12 @@ services:
         container_name: genelookup_app
         depends_on:
             - mariadb
+            - redis
         ports:
             - "8080:8080"
         links:
             - mariadb:mariadb
+            - redis:redis
         volumes:
             - .:/srv/app
         env_file: .docker.env
@@ -20,6 +22,12 @@ services:
         environment:
             - MYSQL_DATABASE=gene_lookup
             - MYSQL_ROOT_PASSWORD=password
+    redis:
+        image: centos/redis-5-centos7
+        ports:
+            - "6379:6379"
+        environment:
+            - REDIS_PASSWORD=beans
     artisan:
         image: genelookup_app
         container_name: genelookup_artisan
