--- a/.docker/apache/conf.d/ports.conf
+++ b/.docker/apache/conf.d/ports.conf
@@ -1,10 +1,10 @@
-Listen 8080
+Listen *:8080
 
 <IfModule ssl_module>
-        Listen 4430
+        Listen *:8443
 </IfModule>
 
 <IfModule mod_gnutls.c>
-        Listen 4430
+        Listen *:8443
 </IfModule>
 
