--- a/.docker/apache/vhost.conf
+++ b/.docker/apache/vhost.conf
@@ -1,13 +1,13 @@
 <VirtualHost *:8080>
-    # ServerName gene-lookup.berglab.unc.edu
     
     DocumentRoot /srv/app/public
-
-    <Directory "/srv/app/public">
-        AllowOverride all
-        Require all granted
-    </Directory>
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
+
+<Directory "/srv/app/public">
+    AllowOverride all
+    Require all granted
+    DirectoryIndex login.html index.html index.php
+</Directory>
