try something else for ssl

--- a/.docker/apache/default-ssl.conf
+++ b/.docker/apache/default-ssl.conf
@@ -9,9 +9,9 @@
         # Enable/Disable SSL for this virtual host.
         SSLEngine on
 
-        SSLCertificateFile /etc/ssl/certs/ca.crt
-        SSLCertificateKeyFile /etc/ssl/certs/ca.key
-        SSLCACertificatePath /etc/ssl/certs
+        # SSLCertificateFile /etc/ssl/certs/ca.crt
+        # SSLCertificateKeyFile /etc/ssl/certs/ca.key
+        # SSLCACertificatePath /etc/ssl/certs
 
      </VirtualHost>
 </IfModule>
