trying more still for ssl

--- a/.docker/apache/conf.d/ports.conf
+++ b/.docker/apache/conf.d/ports.conf
@@ -1,10 +1,10 @@
 Listen *:8080
+Listen *:8443 https
 
-<IfModule ssl_module>
-        Listen *:8443
-</IfModule>
+# <IfModule ssl_module>
+# </IfModule>
 
-<IfModule mod_gnutls.c>
-        Listen *:8443
-</IfModule>
+# <IfModule mod_gnutls.c>
+#         Listen *:8443
+# </IfModule>
 
